--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background: linear-gradient(147deg, #070827, #142338);
+  background-size: 100vw 100vh;
+}
+
 .App {
+  height: 100vh;
+  /* gap: 5rem; */
+
   text-align: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.App h1 {
+  font-size: 2.5rem;
+
+  color: #fff;
+  text-shadow: 1px 1px 1px #ff1100;
+
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.App ul {
+  width: 30%;
+  font-size: 1.3rem;
+  font-weight: bold;
+
+  margin: 10% 0;
+
+  color: #9b9b9b;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.App li {
+  padding: 0.3rem 3rem;
+  margin: 0.1rem 0;
+
+  background: #1423383b;
+  
+  border-radius: 2px;
+  border: 0.3px solid rgb(0, 0, 0);
+  border-collapse: collapse;
+}
+
+hr {
+  width: 40%;
+  height: 2px;
+
+  border: 0;
+  margin: 1em auto;
+
+  display: block;
+
+  background-image: -webkit-linear-gradient(0deg, transparent, #ff1100, #fff, transparent);
 }
 
 .picked {
-  font-size: 2rem;
+  font-size: 2.3rem;
+  font-weight: bolder;
+
+  color: #fff;
+  
+  text-decoration: underline #ff1100 2px;
 }
 
 button {
-  padding: 2rem;
+  padding: 1rem;
+
+  font-size: .9rem;
+  font-weight: bold;
+
+  background-color: #ff1100;
+  color: #fff;
+
+  border-radius: 10px;
+  border: 1px solid #fff;
 }
